# nsu-basics-oop

./: README.md
lab1_oop/: CMakeLists.txt
lab1_oop/src/: trit.cpp  tritset.cpp  tritset.h  tritvalue.cpp
lab1_oop/test/: test_set.h  tests.cpp
lab2_oop/: CMakeLists.txt
lab2_oop/src/: fabrica.cpp  main.cpp  parser.cpp  parser.h  worker.cpp
lab2_oop/test/: examples.txt  tests.cpp  tests.h
lab3_oop/: CMakeLists.txt
lab3_oop/src/: cmdparser.cpp  cmdparser.h  main.cpp
lab3_oop/src/Battlefield/: battlefield.cpp  battlefield.h
lab3_oop/src/Fabrica/: fabrica.cpp  fabrica.h
lab3_oop/src/Gameview/: gameview.cpp  gameview.h
lab3_oop/src/Player/: console_player.cpp  optimal_player.cpp  player.h  random_player.cpp
lab3_oop/src/Ship/: ship.cpp  ship.h
